--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,19 @@ authors = ["Fantix King <fantix.king@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+fastapi = "^0.70.0"
+uvicorn = {version = "^0.15.0", extras = ["standard"]}
+edgedb = "^0.18.4"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.2.5"
+httpx = "^0.21.1"
+asgi-lifespan = "^1.0.1"
+
+[tool.poetry.plugins."cii.modules"]
+"common" = "cii.common"
+"playbook" = "cii.playbook"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
